bk_ida/gccida/c1/emit_library_call_value_1
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3905:1: error: must use 'enum' tag to refer to type 'libcall_type'
libcall_type fn_type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3906:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3901:6: error: conflicting types for 'emit_library_call_value_1'
rtx  emit_library_call_value_1( 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:213:12: note: previous declaration is here
static rtx emit_library_call_value_1            PARAMS ((int, rtx, rtx,
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3914:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3916:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3919:27: error: expected expression
emit_library_call_value_1::arg *v18; // r13 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3920:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3921:4: error: expected ';' after expression
rtx v20; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3921:5: error: use of undeclared identifier 'v20'
rtx v20; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3925:6: error: use of undeclared identifier 'overflow_arg_area'
rtx *overflow_arg_area; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3926:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3926:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3928:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v27; // rcx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3929:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v28; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3930:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3930:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3945:27: error: expected expression
emit_library_call_value_1::arg *v44; // rcx 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3945:1: error: redefinition of label 'emit_library_call_value_1'
emit_library_call_value_1::arg *v44; // rcx 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3919:1: note: previous definition is here
emit_library_call_value_1::arg *v18; // r13 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/calls.c:3949:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // esi 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_library_call_value_1/src/obj/calls.o] Error 1
